# test_test_test

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  global_config.py  main.py  makefile  pyproject.toml
migration/: env.py
migration/versions/: 41ccfa6e1f2d_initial.py
public/: handlers.py
s3_api/: dal.py
src/: dependencies.py  main.py
src/config/: conf_dataclasses.py  config.py  db.py  fastapi_config.py
src/database/: crud.py  models.py  schema.py
src/logger/: loguru.py
src/public/: handlers.py
src/s3_api/: s3client.py
